# alethia

./: CONTRIBUTING.rst  LICENSE  Makefile  README.rst  pyproject.toml
.github/: ISSUE_TEMPLATE.md
alethia/: __init__.py  alethia.py  cli.py  embeddings.py  fuzzy_match.py  models.py  similarity.py  stats.py  utils.py
alethia/data/: India_all_state_districts.csv  India_district_mappings.csv  mteb_dashboard.csv
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
notebooks/: compare_models.ipynb  demo.ipynb
tests/: __init__.py  test_alethia.py
