[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alethia"
version = "0.1.0"
description = "Pacakge to perform fuzzy matching using language models."
readme = "README.rst"
authors = [
  {name = "Saket Choudhary", email = "saketkc@gmail.com"}
]
maintainers = [
  {name = "Saket Choudhary", email = "saketkc@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
    "fastembed>=0.6.1",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "sentence-transformers>=4.1.0",
    "typer>=0.15.3",
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]
ollama = [
    "chromadb>=1.0.7",
]
plot = [
    "matplotlib>=3.10.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "umap-learn>=0.5.7",
]
[project.urls]

bugs = "https://github.com/saketkc/alethia/issues"
changelog = "https://github.com/saketkc/alethia/blob/master/changelog.md"
homepage = "https://github.com/saketkc/alethia"

[tool.setuptools]
packages = ["alethia"]
[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

